--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
+    "tailwind-scrollbar": "^1.3.1",
     "vue-cli-plugin-tailwind": "~2.2.18"
   }
 }
